--- a/account/templates/myorder.htm
+++ b/account/templates/myorder.htm
@@ -16,7 +16,7 @@
                     <td><a href="/account/order/?{{ i.sn }}">{{ i.sn }}</a></td>
                     <td>{{ i.ordlog_set.all.0.time|date:'Y-m-d H:i:s' }}</td>
                     <td>{% for ii, vv in i.total.items %}{% if forloop.first %}{{ vv }}{% else %} | {{ vv }}{% endif %}{% endfor %}</td>
-                    <td>{{ i.ordsats.get_status_display }} | {{ i.ordship.get_status_display }} | {{ i.ordfnc.get_status_display }}</td>
+                    <td>{{ i.get_status_display }} | {{ i.ordship.get_status_display }} | {{ i.fnc.get_status_display }}</td>
                     <td><a href="/account/order/?{{ i.sn }}">查看详情</a></td>
                 </tr>
 {% endfor %}
