--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -45,7 +45,7 @@
                         <td colspan="4">
                             <a href="/tag/" class="btnB bBtn">继续购物</a>
                         </td>
-                        <td align="right" colspan="2"><a href="/consignee/" class="btnB bBtn">结算</a></td>
+                        <td align="right" colspan="2"><a href="/cart/consignee/" class="btnB bBtn">结算</a></td>
                     </tr>
                 </table>
                 <table width="100%">
