--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -2,12 +2,11 @@
 
 {% block js %}
     <script type="text/javascript" src="{{ STATIC_URL }}order/js/neweditorder.configuration.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}consignee/js/consignee.configuration.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}logistics/js/consignee.configuration.js"></script>
 {% endblock %}
 
 {% block content %}
         <form action="{{ request.paths.提交订单 }}" method="POST" id="checkout">
-          <h3>商品列表</h3>
           <table width="100%" cellpadding="3" cellspacing="1" class="sortTable">
             <thead>
             <tr>
@@ -47,68 +46,68 @@
               <td></td>
             </tr>
           </table>
-        <h3>订单类型</h3>
-            <table width="100%" cellpadding="3" cellspacing="1">
-                <tr>
-                  <td width="100px" align="right">订单类型：</td>
-                  <td width="90%">{{ oTypeForm.oType }}</td>
-                </tr>
-            </table>
-        <h3>收货人信息</h3>
-            <table width="100%" cellpadding="3" cellspacing="1" id="cconsignee">
-                <tr>
-                  <td width="100px" align="right">会员帐号：</td>
-                  <td width="90%">{{ form.user }}<input type="button" value="检查会员是否存在" class="button" id="checkUser" /></td>
-                </tr>
-                <tr>
-                    <td align="right">支付方式：</td>
-                    <td>{{ form.pay }}</td>
-                </tr>
-                <tr>
-                    <td align="right">配送方式：</td>
-                    <td>市内免费送货上门</td>
-                </tr>
-                <tr>
-                    <td align="right">收货人姓名：</td>
-                    <td>{{ form.consignee }}</td>
-                </tr>
-                <tr>
-                    <td align="right">配送区域：</td>
-                    <td>{{ form.area }}</td>
-                </tr>
-                <tr>
-                    <td align="right">详细地址：</td>
-                    <td width="90%">{{ form.address }}</td>
-                </tr>
-                <tr>
-                    <td align="right">联系电话：</td>
-                    <td>{{ form.tel }}</td>
-                </tr>
-                <tr>
-                    <td align="right">最佳收货日期：</td>
-                    <td>{{ form.date }}</td>
-                </tr>
+          <table width="100%" cellpadding="3" cellspacing="1">
             <tr>
-                <td align="right">最佳收货时间：</td>
-                <td>{{ form.time }}</td>
+              <td width="100px" align="right">{{ ord.user.label }}</td>
+              <td width="90%">{{ ord.user }}<input type="button" value="检查会员是否存在" class="button" id="checkUser" /></td>
             </tr>
             <tr>
-                <td align="right" valign="top">备注：</td>
-                <td>{{ form.note }}</td>
+              <td align="right">{{ ord.typ.label }}：</td>
+              <td>{{ ord.typ }}</td>
             </tr>
+          </table>          
+          <table width="100%" cellpadding="3" cellspacing="1">
             <tr>
-                <td></td>
-                <td>
-                  <input type="button" value="曲奇礼品" class="button" id="addPostA" />
-                  <input type="button" value="礼品两份" class="button" id="addPostB" />
-                  <input type="button" value="会员生日巧克力礼品" class="button" id="addPostC" />
-                  <input type="button" value="订单号附属品" class="button" id="addPostD" />
-                </td>
+              <td width="100px" align="right">{{ fnc.pay.label }}：</td>
+              <td width="90%">{{ fnc.pay }}</td>
             </tr>
-        </table>
-        <center>
-            {% csrf_token %}
-            <input type="submit" name="submit" value="提交订单" class="button" />
-        </center>
+          </table>
+          <table width="100%" cellpadding="3" cellspacing="1" id="cconsignee">
+              <tr>
+                  <td width="100px" align="right">{{ cnsgn.dlvr.label }}：</td>
+                  <td width="90%">{{ cnsgn.dlvr }}</td>
+              </tr>
+              <tr>
+                  <td align="right">{{ cnsgn.consignee.label }}：</td>
+                  <td>{{ cnsgn.consignee }}</td>
+              </tr>
+              <tr>
+                  <td align="right">{{ cnsgn.area.label }}：</td>
+                  <td>{{ cnsgn.area }}</td>
+              </tr>
+              <tr>
+                  <td align="right">{{ cnsgn.address.label }}：</td>
+                  <td>{{ cnsgn.address }}</td>
+              </tr>
+              <tr>
+                  <td align="right">{{ cnsgn.tel.label }}：</td>
+                  <td>{{ cnsgn.tel }}</td>
+              </tr>
+              <tr>
+                  <td align="right">{{ cnsgn.date.label }}：</td>
+                  <td>{{ cnsgn.date }}</td>
+              </tr>
+          <tr>
+              <td align="right">{{ cnsgn.time.label }}：</td>
+              <td>{{ cnsgn.time }}</td>
+          </tr>
+          <tr>
+              <td align="right" valign="top">{{ cnsgn.note.label }}：</td>
+              <td>{{ cnsgn.note }}</td>
+          </tr>
+              <tr>
+              <td></td>
+              <td>
+                <input type="button" value="曲奇礼品" class="button" id="addPostA" />
+                <input type="button" value="礼品两份" class="button" id="addPostB" />
+                <input type="button" value="会员生日巧克力礼品" class="button" id="addPostC" />
+                <input type="button" value="订单号附属品" class="button" id="addPostD" />
+              </td>
+          </tr>
+      </table>
+      <center>
+          {% csrf_token %}
+          <input type="submit" name="submit" value="提交订单" class="button" />
+      </center>
     </form>
 {% endblock %}
