--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -28,7 +28,7 @@
                             <input type="text" name="{{ i.mark }}" value="{{ i.num }}" size="1" class="iNum" />
                         </td>
                         <td>￥<span id="st{{ i.mark }}">{{ i.total|floatformat:2 }}</span> 元</td>
-                        <td align="right"><a href="/cart/clear/{{ i.mark }}/" class="btnB bBtn">删除</a></td>
+                        <td align="right"><a href="/cart/delete/?id={{ i.mark }}" class="btnB bBtn">删除</a></td>
                     </tr>
 {% endfor %}
                     <tr class="bLine">
@@ -52,12 +52,12 @@
                     <tr>
                         <td>除按蛋糕规格免费赠送的餐具数量外（详见下面说明），是否额外需要餐具？</td>
                         <td>单价：1元/份</td>
-                        <td align="right"><a href="/cart/buy/1/" class="btnB bBtn">是的，我需要增加餐具</a></td>
+                        <td align="right"><a href="/cart/buy/?id=1" class="btnB bBtn">是的，我需要增加餐具</a></td>
                     </tr>
                     <tr>
                         <td>是否额外购买生日套装（生日牌/冷烟花/蜡烛）？</td>
                         <td>单价：3元/份</td>
-                        <td align="right"><a href="/cart/buy/2/" class="btnB bBtn">是的，我需要增加生日套装</a></td>
+                        <td align="right"><a href="/cart/buy/?id=2" class="btnB bBtn">是的，我需要增加生日套装</a></td>
                     </tr>
                 </table>
             </form>
