--- a/office/templates/search.htm
+++ b/office/templates/search.htm
@@ -4,5 +4,6 @@
               {{ i }}
 {% endfor %}
             <input type="submit" value=" 搜索 " class="button" />
+            <input type="button" value=" 清空 " class="button" onclick="javascript:(function(){ $('#id_k').val(''); })()"/>
           </form>
       </div>
