--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -17,22 +17,34 @@
             <td>{{ i.get_typ_display }}</td>
             <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
             <td>{{ i.logcs.consignee }} [ {{ i.logcs.tel }} ]</td>
-            <td>{{ i.fee.paid|stringformat:"0.2f" }} | {{ i.fee.kpchng|stringformat:"0.2f" }} | {{ i.fee.total|stringformat:"0.2f" }} | {{ i.fnc.name }}</td>
-            <td>{{ i.get_status_display }} | {{ i.fnc.get_status_display }} | {{ i.ordship.get_status_display }}</td>
+            <td>{{ i.fee.paid|stringformat:"0.2f" }} | {{ i.fee.kpchng|stringformat:"0.2f" }} | {{ i.fee.total|stringformat:"0.2f" }} | {{ i.fnc.cod.get_cod_display }}</td>
+            <td>{{ i.get_status_display }} | {{ i.fnc.get_status_display }} | {{ i.logcs.get_status_display }}</td>
             {% optr i %}
           </tr>
-{% for item in i.items %}
+{% if i.items %}
+{% for i in i.items %}
           <tr align="center">
-            <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
-            <td>{{ item.spec }}</td>
-            <td>{{ item.num }}</td>
-            <td>{{ item.produce.get_status_display }}</td>
-            {% optr item %}
+            <td align="right" nowrap="true" colspan="2">{{ i.name }}</td>
+            <td>{{ i.spec }}</td>
+            <td>{{ i.num }}</td>
+            <td>{{ i.get_status_display }}</td>
+            {% optr i %}
           </tr>
 {% endfor %}
+{% else %}
+{% for i in i.pro_set.all %}
+          <tr align="center">
+            <td align="right" nowrap="true" colspan="2">{{ i.name }}</td>
+            <td>{{ i.spec }}</td>
+            <td>{{ i.num }}</td>
+            <td>{{ i.get_status_display }}</td>
+            <td>&nbsp;</td>
+          </tr>
+{% endfor %}
+{% endif %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="5"><a href="{{ request.paths.地图 }}?k={{ i.logcs.address }}" target="_blank">{{ i.logcs.address }}</a></td>
+            <td colspan="5"><a href="{{ request.paths.地图 }}?k={{ i.logcs.address }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
           </tr>
           <tr align="center">
             <td>时间</td>
