--- a/shop/static/shop/css/base.css
+++ b/shop/static/shop/css/base.css
@@ -2082,8 +2082,10 @@ a:hover.backToTop {
 
 
 ul.messagelist {
-    padding: 0 0 5px 0;
-    margin: 0;
+	padding: 5px;
+	margin: 0 0 20px 0;
+	border: 1px solid #E5E5E5;
+	background: #FFFFFF;
 }
 
 ul.messagelist li {
@@ -2091,7 +2093,7 @@ ul.messagelist li {
     display: block;
     padding: 4px 5px 4px 25px;
     margin: 0 0 3px 0;
-    border-bottom: 1px solid #ddd;
+    border: 1px solid #ddd;
     color: #666;
     background: #ffc url(/static/images/icon_success.gif) 5px .3em no-repeat;
 }
