财务,生产重构基本完成
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/produce/templates/produceui.htm
+++ b/produce/templates/produceui.htm
@@ -26,7 +26,7 @@
             <td align="right" nowrap="true">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
             <td>{{ item.num }}</td>
-            <td>{{ item.produce.get_status_display }}</td>
+            <td>{{ item.get_status_display }}</td>
             {% optr item %}
           </tr>
 {% endfor %}
