拆分装饰器.
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -49,7 +49,7 @@
           <h4>标签</h4>
           <div class="tagsBox">
 {% for i in tags %}
-              <a href="/tag/{{ i.tag }}/"class="tags_{{ tagsClass|random }}">{{ i.tag }}</a>
+              <a href="/tag/{{ i.tag }}/"class="tags_{{ tagsCls|random }}">{{ i.tag }}</a>
 {% endfor %}
           </div>
         </div>
