--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-        <form action="{{ request.paths.提交订单 }}" method="POST" id="checkout">
+        <form action="{{ request.pPath.提交订单 }}" method="POST" id="checkout">
           <table width="100%" cellpadding="3" cellspacing="1" class="sortTable">
             <thead>
             <tr>
@@ -29,10 +29,10 @@
               <td>{{ i.item.sn }}</td>
               <td>{{ i.forms.specID }}</td>
               <td>{{ i.forms.disID }}</td>
-              <td><span id="am{{ i.mark }}">{{ i.fee|floatformat:2 }}</span></td>
+              <td><span id="am{{ i.mark }}">{{ i.nfee|floatformat:2 }}</span></td>
               <td>{{ i.forms.num }}</td>
               <td><span id="st{{ i.mark }}">{{ i.total|floatformat:2 }}</span></td>
-              <td><a href="{{ request.paths.删订单商品 }}?mark={{ i.mark }}" class="button">删除</a></td>
+              <td><a href="{{ request.pPath.删订单商品 }}?mark={{ i.mark }}" class="button">删除</a></td>
             </tr>
 {% endfor %}
           </tbody>
