--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -15,7 +15,7 @@
 {% for i in oList %}
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_typ_display }}</td>
-            <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
+            <td><a href="{{ request.pPath.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
             <td>{{ i.logcs.consignee }} [ {{ i.logcs.tel }} ]</td>
             <td>200.00 | 11.00 | 189.00 | {{ i.fnc.name }}</td>
             <td>{{ i.get_status_display }} | {{ i.fnc.get_status_display }} | {{ i.ordship.get_status_display }}</td>
@@ -33,7 +33,7 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="5"><a href="{{ request.paths.地图 }}?k={{ i.logcs.address }}" target="_blank">{{ i.logcs.address }}</a></td>
+            <td colspan="5"><a href="{{ request.pPath.地图 }}?k={{ i.logcs.address }}" target="_blank">{{ i.logcs.address }}</a></td>
           </tr>
           <tr align="center">
             <td>时间</td>
