--- a/inventory/templates/inventorylist.htm
+++ b/inventory/templates/inventorylist.htm
@@ -16,7 +16,7 @@
           <tr align="center">
             <td>&nbsp;</td>
             <td>{{ ii.spec.value }}</td>
-            <td><a href="{{ request.paths.备货选择 }}?id={{ ii.id }}"><img src="{{ STATIC_URL }}images/{% if ii.invpro.onl %}yes{% else %}no{% endif %}.gif" /></a></td>
+            <td><a href="{{ request.pPath.备货选择 }}?id={{ ii.id }}"><img src="{{ STATIC_URL }}images/{% if ii.invpro.onl %}yes{% else %}no{% endif %}.gif" /></a></td>
           </tr>
 {% endfor %}
 {% endfor %}
