--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -30,29 +30,29 @@
     <ul id="navMenu">
       <li><a href="/" id="showNav"></a></li>
       <li>
-        <a href="{{ request.paths.订单 }}" class="nav">订单管理</a>
+        <a href="{{ request.pPath.订单 }}" class="nav">订单管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.paths.订单 }}">订单</a></li>
+            <li><a href="{{ request.pPath.订单 }}">订单</a></li>
             <li><a href="/back/">退货</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="{{ request.paths.物流 }}" class="nav">物流管理</a>
+        <a href="{{ request.pPath.物流 }}" class="nav">物流管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.paths.物流 }}">物流</a></li>
+            <li><a href="{{ request.pPath.物流 }}">物流</a></li>
           </ul>
         </div>
       </li>
       <li>
-        <a href="{{ request.paths.生产 }}" class="nav">生产管理</a>
+        <a href="{{ request.pPath.生产 }}" class="nav">生产管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.paths.生产 }}">生产</a></li>
-            <li><a href="{{ request.paths.备货 }}">备货</a></li>
-            <li><a href="{{ request.paths.物料 }}">物料</a></li>
+            <li><a href="{{ request.pPath.生产 }}">生产</a></li>
+            <li><a href="{{ request.pPath.备货 }}">备货</a></li>
+            <li><a href="{{ request.pPath.物料 }}">物料</a></li>
           </ul>
         </div>
       </li>
@@ -81,7 +81,7 @@
         <a href="/finance/" class="nav">财务管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{{ request.paths.财务 }}">财务</a></li>
+            <li><a href="{{ request.pPath.财务 }}">财务</a></li>
             <li><a href="/finance/">零钱</a></li>
             <li><a href="/reimburse/">退款</a></li>
           </ul>
@@ -130,8 +130,8 @@
           </ul>
         </div>
       </li>
-      <li><a href="/" target="_blank">查看网店</a></li>
-      <li><a href="/account/logout/">登出</a></li>
+      <li><a href="{{ request.nPath.商城 }}" target="_blank">查看网店</a></li>
+      <li><a href="{{ request.nPath.登出 }}">登出</a></li>
     </ul>
     <div id="header">
         <div id="urHere"><a href="/office/" id="index">31kecake 管理中心</a> {% if request.domElement %} <a href="{{ request.domElement.path }}">{{ request.domElement.get_path_display }}</a>{% endif %}</div>
