--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -16,7 +16,7 @@
 {% for i in oList %}
           <tr align="center" class="tr_border_top_black">
             <td>{{ i.get_typ_display }}</td>
-            <td><a href="{{ request.paths.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
+            <td><a href="{{ request.pPath.订单 }}{{ i.sn }}/">{{ i.sn }}</a></td>
             <td>{{ i.logcs.date|date:"Y-m-d" }} | {{ i.logcs.stime|time:"H:i" }} - {{ i.logcs.etime|time:"H:i" }}</td>
             <td>{{ i.logcs.consignee }}</td>
             <td>{{ i.logcs.tel }} | {{ i.user.username}}</td>
@@ -27,15 +27,15 @@
           <tr align="center">
             <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
             <td>{{ item.spec }}</td>
-            <td>{{ item.num }}</td>
-            <td>{{ item.fee }}</td>
+            <td>{{ item.nfee|floatformat:2 }}</td>
             <td>{{ item.get_dis_display }}</td>
-            <td>{{ item.nfee }}</td>
+            <td>{{ item.num }}</td>
+            <td>{{ item.total|floatformat:2 }}</td>
           </tr>
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="8"><a href="{{ request.paths.地图 }}?k={{ i.logcs.address }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
+            <td colspan="8"><a href="{{ request.pPath.地图 }}?k={{ i.logcs.address }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
           </tr>          
           <tr>
             <td align="center">备注</td>
